[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""a CLI tool to generate unicode fonts"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="runi"
repository ="https://github.com/thor314/runi"
version    ="0.1.0"

[dependencies]
anyhow   ="1.0"
# cute = "0.3.0"
log       ="0.4" 
thiserror="1.0"
env_logger = "0.11"
dotenvy = "0.15" 
clap = {version = "4.4.16", features = ["derive"]}
clap_complete = "4.5.1"
# delegate = "0.12.0" # useful for subcommand-style cli
lazy_static = "1.4.0"

[dev-dependencies]
rstest    ="0.18"         # testing convenience proc-macros
criterion ="0.5"
arbitrary         ={ version = "1.1", features = ["derive"] } # see quickcheck
quickcheck        ="1.0"      # lowkey proptest suite
quickcheck_macros ="1" # derive 

# [[test]]
# name = "integration"
# path = "tests/tests.rs"

[[bench]]
name = "bench"
harness = false
