[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""a CLI tool to generate unicode fonts"""
edition    ="2021"
license    ="MIT"
name       ="runi"
repository ="https://github.com/thor314/runi"
version    ="0.1.4"
readme     ="README.md"
keywords   =["cli", "unicode", "font", "generator"]

[dependencies]
anyhow   ="1.0"
log       ="0.4" 
thiserror="2.0"
env_logger = "0.11"
clap = {version = "4.4.16", features = ["derive"]}
clap_complete = "4.5.1"
lazy_static = "1.4.0"
